--- a/src/app/components/characters-list/styles.module.css
+++ b/src/app/components/characters-list/styles.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  min-height: 200px;
   max-height: 56vh;
   overflow-y: scroll;
   width: 100%;
