--- a/src/app/components/characters-list/styles.module.css
+++ b/src/app/components/characters-list/styles.module.css
@@ -32,3 +32,10 @@
   text-decoration: underline;
   margin-bottom: 8px;
 }
+
+.notification {
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+}
