fix: update loader styling

--- a/src/app/components/loader/styles.css
+++ b/src/app/components/loader/styles.css
@@ -20,6 +20,7 @@
   background-repeat: no-repeat;
   box-sizing: border-box;
   animation: animloaderBack 1s linear infinite alternate;
+  rotate: 45deg;
 }
 .loader::before {
   content: "";
